# vix-skins

./: .gitignore  Makefile.am  README.md  Rules-po.mak  configure.ac
MHDC/: CommonSkin.xml  deleted-screens.xml
MHDC/CONTROL/: control
MHDC/meta/: Makefile.am  skin_vixmhdc.xml
MHDC/po/: Makefile.am
Magic-HD/: CommonSkin.xml  ExtPlugins.xml  Templates.xml  skin.xml  skin_Magic_HD.xml
Magic-HD-Light/: skin.xml
Magic-HD-Night/: skin.xml
Magic-HD-Night/CONTROL/: control
Magic-HD-Night/meta/: Makefile.am  skin_magichd-night.xml
Magic-HD-Noire/: skin.xml
Magic-HD-Noire/CONTROL/: control
Magic-HD-Noire/meta/: Makefile.am  skin_magichd-noire.xml
Magic-HD/CONTROL/: control
Magic-HD/meta/: Makefile.am  skin_magichd.xml
Magic-HD/src/: ExtPlugins.xml  Makefile.am
Magic-HD/src/border/: Makefile.am
Magic-HD/src/buttons/: Makefile.am
Magic-HD/src/dvr/: Makefile.am
Magic-HD/src/epg/: Makefile.am
Magic-HD/src/fonts/: Makefile.am
Magic-HD/src/icons/: Makefile.am
Magic-HD/src/infobar/: Makefile.am
Magic-HD/src/piconbg/: Makefile.am
Magic-HD/src/window/: Makefile.am
Magic-SD/: skin.xml
Magic-SD/CONTROL/: control
Magic-SD/meta/: Makefile.am  skin_magicsd.xml
ViX-Common/: CommonSkin.xml
ViX-Common/CONTROL/: control
ViX-Common/meta/: Makefile.am  skin_vixskincommon.xml
ViX-Common/src/: CommonSkin.xml
ViX-Day-HD/CONTROL/: control
ViX-Day-HD/meta/: Makefile.am  skin_vixdayhd.xml
ViX-Night-HD/CONTROL/: control
ViX-Night-HD/meta/: Makefile.am  skin_vixnighthd.xml
ViXBMC_HD-Common/CONTROL/: control
ViXBMC_HD-Common/meta/: Makefile.am  skin_vixvixbmchdcommon.xml
ViXBMC_HD-Night/: skin.xml  skin.xml.bak
ViXBMC_HD-Night/CONTROL/: control
ViXBMC_HD-Night/meta/: Makefile.am  skin_vixbmchdnight.xml
ViXBMC_HD-Slim/: skin.xml
ViXBMC_HD-Slim/CONTROL/: control
ViXBMC_HD-Slim/meta/: Makefile.am  skin_vixbmchdslim.xml
ViXBMC_Metropolis/CONTROL/: control
ViXBMC_Metropolis/meta/: Makefile.am  skin_vixbmcmetropolis.xml
(+49 files in other folders)
